consul/Ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-pipeline-test-ingress
  namespace: consul
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/whitelist-source-range: "83.94.113.86/32"
spec:
  tls:
  - hosts:
    - praktwo.digitor.dk
    secretName: quickstart-example-tls
  rules:
    - host: praktwo.digitor.dk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sagdokindeks-api-producer
              port:
                number: 80
